brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_operators.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(\"a>>b\")?"
---
TokenizerResult(
  input: "a>>b",
  result: [
    Word("a", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 1,
        line: 1,
        column: 2,
      ),
    )),
    Operator(">>", SourceSpan(
      start: SourcePosition(
        offset: 1,
        line: 1,
        column: 2,
      ),
      end: SourcePosition(
        offset: 3,
        line: 1,
        column: 4,
      ),
    )),
    Word("b", SourceSpan(
      start: SourcePosition(
        offset: 3,
        line: 1,
        column: 4,
      ),
      end: SourcePosition(
        offset: 4,
        line: 1,
        column: 5,
      ),
    )),
  ],
)
