brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_special_parameters-5.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(\"$*\")?"
---
TokenizerResult(
  input: "$*",
  result: [
    Word("$*", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 2,
        line: 1,
        column: 3,
      ),
    )),
  ],
)
