brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_unbraced_parameter_expansion-2.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(\"a$x\")?"
---
TokenizerResult(
  input: "a$x",
  result: [
    Word("a$x", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 3,
        line: 1,
        column: 4,
      ),
    )),
  ],
)
