brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_whitespace.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(\"1 2 3\")?"
---
TokenizerResult(
  input: "1 2 3",
  result: [
    Word("1", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 1,
        line: 1,
        column: 2,
      ),
    )),
    Word("2", SourceSpan(
      start: SourcePosition(
        offset: 2,
        line: 1,
        column: 3,
      ),
      end: SourcePosition(
        offset: 3,
        line: 1,
        column: 4,
      ),
    )),
    Word("3", SourceSpan(
      start: SourcePosition(
        offset: 4,
        line: 1,
        column: 5,
      ),
      end: SourcePosition(
        offset: 5,
        line: 1,
        column: 6,
      ),
    )),
  ],
)
